--- a/source/_posts/css基础/标准盒模型和怪异盒模型.md
+++ b/source/_posts/css基础/标准盒模型和怪异盒模型.md
@@ -8,12 +8,12 @@ description:
 ### 标准盒子模型
 即`box-sizing:content-box`;
 dom的width：content的width。
-DOM元素显示时占据的总宽度 = margin + padding + border + content
+`DOM元素显示时占据的总宽度 = margin + padding + border + content`
 chrome、ff的浏览器默认样式即为标准盒子模型。
 
 ### IE盒子模型
 即`box-sizing:border-box;`
 dom的width：content的width+padding+border
-元素的总宽度 = width + margin
+`元素的总宽度 = width + margin`
 ie浏览器默认的浏览器默认样式即为IE盒子模型。
 此时content的宽高只能通过调整width、padding、border来设置。
