--- a/source/_posts/js基础/关于异步方法一.md
+++ b/source/_posts/js基础/关于异步方法一.md
@@ -10,7 +10,7 @@ description: js异步
 比如：A方法调用ajax请求,B方法调用A方法，同时B方法调用C方法进行一些涉及到ajax返回的数据的处理工作（因某些原因该工作不能放到ajax请求的回调函数中，比如需要用到另一个ajax请求的内容）。
 
 伪代码如下，用axios替代ajax请求：
-```
+```js
 // 这段代码的目的：通过B函数，成功为经过ajax请求获取到的id设置name。
 
 // 全局变量
@@ -29,7 +29,7 @@ function A(){
 
 // 该方法通过对象data的userId，为data设置userName。
 function C(data){
-    mapRelation.map(userItem=>{
+    mapRelation.forEach(userItem=>{
         if(userItem.userId === data.userId){
             data.userName = userItem.uesrName;
         }
