--- a/source/_posts/浏览器/浏览器存储总结.md
+++ b/source/_posts/浏览器/浏览器存储总结.md
@@ -21,8 +21,8 @@ tags: [浏览器原理] #文章标签，可空，多标签请用格式，注意:
 4. 内嵌iframe
 
 ## 1. localStorage
-HTML5新增。
-* 生命周期：用于将数据长久保存在网站中，保存的数据没有过期时间，直到手动删除。关闭浏览器呢？
+HTML5新增。可以长期存储,只要你不清理数据就会长期存在，所以主要是存储长期的数据。
+* 生命周期：用于将数据长久保存在网站中，保存的数据没有过期时间，直到手动删除。
 * 使用范围：同一个浏览器下的不同浏览器窗口的同源标签页之间，可以共享。
 * 大小：因浏览器而异，大致在2.5MB到10MB之间。
 
@@ -39,7 +39,7 @@ HTML5新增。
 * 获取某条localStorage记录的名称：`localStorage.key(idx)`
 
 ## 2. sessionStorage
-HTML5新增。
+HTML5新增。主要用来保存当前会话的数据。
 * 生命周期：当前窗口/标签页，刷新时不会被清空。
 * 使用范围：当前标签页。当前标签页内跳转可以共享sessionStorage，但是通过打开新标签页跳转时不能共享。
 
